# crubit

./: .bazelrc  BUILD  MODULE.bazel
cc_bindings_from_rs/: BUILD
cc_bindings_from_rs/bazel_support/: cc_bindings_from_rust_rule.bzl  toolchain.bzl
cc_bindings_from_rs/generate_bindings/: BUILD
common/: BUILD  token_stream_printer.rs
rs_bindings_from_cc/bazel_support/: compile_rust.bzl
support/: BUILD
support/rs_std/: BUILD  slice_ref.h  str_ref.h
tutorial/: BUILD  hello-world.cpp  lib.rs
